let's just use a docker container and run it ourselves.

--- a/src/pages/uzg/index.astro
+++ b/src/pages/uzg/index.astro
@@ -105,9 +105,9 @@ const recordings: Recording[] = listing
         Uitzending gemist
       </h1>
       <p class="mx-auto mt-5 max-w-5xl text-xl text-gray-500">
-        Dit zijn opnames van de Dinxper FM stream. Gebruik de speler om de
-        uitzending terug te luisteren of klik de link om de uitzending op te
-        slaan.
+        Dit zijn opnames van uitzendingen op de Dinxper FM stream. Gebruik de
+        speler om de uitzending terug te luisteren of klik de link om de
+        uitzending op te slaan.
       </p>
     </div>
     <UitzendingGemistPlayer client:only />
