--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,5 @@
 ---
+export const prerender = true;
 import ButtonAudio from "../components/ButtonAudio.astro";
 import ButtonVideo from "../components/ButtonVideo.astro";
 import Video from "../components/Video.astro";
