Bit more spacing around player button on homepage

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -121,7 +121,7 @@ const videoEnabled = false;
   </div>
 
   <nav class="flex justify-evenly bg-gray-100">
-    <ul class="flex flex-wrap list-none pl-0 mb-0">
+    <ul class="flex flex-wrap list-none my-1">
       {
         videoEnabled && (
           <li class="mr-2">
