Fix link to schedule

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -160,10 +160,8 @@ const videoEnabled = false;
     />
   </div>
   <div class="text-center">
-    <a
-      target="blank"
-      class="text-blue-400"
-      href="/programmering/2022-11-12.jpeg">In nieuwe pagina openen</a
+    <a target="blank" class="text-blue-400" href={programmering.src}
+      >In nieuwe pagina openen</a
     >
   </div>
 
