--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -22,13 +22,7 @@ import mashops from "~/assets/img/Mashops.jpg";
 import expert from "~/assets/img/Expert.jpg";
 import alswin from "~/assets/img/AlswinGr.jpg";
 
-interface Sponsor {
-  href: string;
-  src: ImageMetadata;
-  alt: string;
-}
-
-const sponsors: Sponsor[] = [
+const sponsors = [
   {
     href: "https://www.facebook.com/markt.dinxperlo/",
     src: makt,
