--- a/src/layouts/DfmLayout.astro
+++ b/src/layouts/DfmLayout.astro
@@ -1,6 +1,6 @@
 ---
 import Contactbar from "../components/Contactbar.astro";
-import bgImage from "~/assets/img/dfm_studio-blurred.jpg";
+import bgImage from "../assets/img/dfm_studio-blurred.jpg";
 import "@fontsource/cabin";
 ---
 
