--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,22 +5,22 @@ import DfmLayout from "../layouts/DfmLayout.astro";
 
 import { Image } from "astro:assets";
 
-import programmering from "~/assets/programmering.jpg";
+import programmering from "../assets/programmering.jpg";
 
-import logoDFM from "~/assets/img/logodinxperfm.png";
-import makt from "~/assets/img/makt.jpg";
-import logo13 from "~/assets/img/logo13.jpg";
-import logo15 from "~/assets/img/logo15.jpg";
-import logo16 from "~/assets/img/logo16.jpg";
-import logo18 from "~/assets/img/logo18.jpg";
-import logo19 from "~/assets/img/logo19.jpg";
-import logo22 from "~/assets/img/logo22.jpg";
-import logo23 from "~/assets/img/logo23.jpg";
-import jumbo from "~/assets/img/jumbo.jpg";
-import oldDutch from "~/assets/img/OldDutch.jpg";
-import mashops from "~/assets/img/Mashops.jpg";
-import expert from "~/assets/img/Expert.jpg";
-import alswin from "~/assets/img/AlswinGr.jpg";
+import logoDFM from "../assets/img/logodinxperfm.png";
+import makt from "../assets/img/makt.jpg";
+import logo13 from "../assets/img/logo13.jpg";
+import logo15 from "../assets/img/logo15.jpg";
+import logo16 from "../assets/img/logo16.jpg";
+import logo18 from "../assets/img/logo18.jpg";
+import logo19 from "../assets/img/logo19.jpg";
+import logo22 from "../assets/img/logo22.jpg";
+import logo23 from "../assets/img/logo23.jpg";
+import jumbo from "../assets/img/jumbo.jpg";
+import oldDutch from "../assets/img/OldDutch.jpg";
+import mashops from "../assets/img/Mashops.jpg";
+import expert from "../assets/img/Expert.jpg";
+import alswin from "../assets/img/AlswinGr.jpg";
 
 const sponsors = [
   {
