--- a/src/pages/uzg.astro
+++ b/src/pages/uzg.astro
@@ -4,7 +4,7 @@ import DfmLayout from "../layouts/DfmLayout.astro";
 import { UitzendingGemist } from "../components/uzg-listing";
 import { UitzendingGemistPlayer } from "../components/uzg-player";
 import { Image } from "astro:assets";
-import logoDFM from "~/assets/img/logodinxperfm.png";
+import logoDFM from "../assets/img/logodinxperfm.png";
 ---
 
 <DfmLayout>
