Port styling from leptos-site

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -105,10 +105,9 @@ const sponsors = [
         format="webp"
       />
 
-      <p class="text-center mt-4">Het swingende geluid van Dinxperlo!</p>
+      <p class="text-center mt-4">"Het swingende geluid van Dinxperlo!"</p>
     </div>
   </div>
-
   <nav class="flex justify-evenly bg-gray-100">
     <ul class="flex flex-wrap list-none my-1">
       <li>
@@ -117,7 +116,6 @@ const sponsors = [
           label="Luister live!"
         />
       </li>
-
       <li>
         <a
           class="inline-block mt-3 px-4 no-underline text-blue-700"
@@ -127,7 +125,6 @@ const sponsors = [
       </li>
     </ul>
   </nav>
-
   <div class="mt-10 flex justify-center">
     <Image
       src={programmering}
@@ -139,14 +136,16 @@ const sponsors = [
     />
   </div>
   <div class="text-center">
-    <a target="blank" class="text-blue-400" href={programmering.src}
-      >In nieuwe pagina openen</a
+    <a
+      target="blank"
+      class="text-blue-400"
+      href="/programmering/WeekprogrammaDFM-20230304.jpg"
     >
+      "In nieuwe pagina openen"
+    </a>
   </div>
-
   <div class="mt-10 text-center">
-    <h2 class="text-2xl">Dinxper FM wordt mede mogelijk gemaakt door</h2>
-
+    <h2 class="text-2xl">"Dinxper FM wordt mede mogelijk gemaakt door"</h2>
     <div class="flex flex-row flex-wrap justify-evenly">
       {
         sponsors.map((sponsor) => (
