--- a/src/pages/uzg.astro
+++ b/src/pages/uzg.astro
@@ -23,20 +23,19 @@ import logoDFM from "../assets/img/logodinxperfm.png";
             format="webp"
           /></a
         >
-        <p class="text-center mt-4">Het swingende geluid van Dinxperlo!</p>
+        <p class="text-center mt-4">"Het swingende geluid van Dinxperlo!"</p>
       </div>
-
       <h1 class="text-4xl font-bold text-gray-100 sm:text-5xl lg:text-6xl">
-        Uitzending gemist
+        "Uitzending gemist"
       </h1>
     </div>
   </div>
   <div class="bg-gray-100 text-black p-9">
     <div class="max-w-7xl px-6 text-center">
       <p class="mx-auto mt-5 max-w-5xl text-xl text-gray-500">
-        Dit zijn opnames van uitzendingen op de Dinxper FM stream. Gebruik de
+        "Dit zijn opnames van uitzendingen op de Dinxper FM stream. Gebruik de
         speler om de uitzending terug te luisteren of klik de link om de
-        uitzending op te slaan.
+        uitzending op te slaan."
       </p>
     </div>
     <hr class="my-8" />
