Use png for older machines. Fixup leftover quotes from leptos port

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -105,7 +105,7 @@ const sponsors = [
         format="png"
       />
 
-      <p class="text-center mt-4">"Het swingende geluid van Dinxperlo!"</p>
+      <p class="text-center mt-4">Het swingende geluid van Dinxperlo!</p>
     </div>
   </div>
   <nav class="flex justify-evenly bg-gray-100">
@@ -120,7 +120,7 @@ const sponsors = [
         <a
           class="inline-block mt-3 px-4 no-underline text-blue-700"
           href="/uzg"
-          title="">Uitzending gemist?</a
+          title="Uitzending van Dinxper FM gemist?">Uitzending gemist?</a
         >
       </li>
     </ul>
@@ -137,11 +137,11 @@ const sponsors = [
   </div>
   <div class="text-center">
     <a target="blank" class="text-blue-400" href={programmering.src}>
-      "In nieuwe pagina openen"
+      In nieuwe pagina openen
     </a>
   </div>
   <div class="mt-10 text-center">
-    <h2 class="text-2xl">"Dinxper FM wordt mede mogelijk gemaakt door"</h2>
+    <h2 class="text-2xl">Dinxper FM wordt mede mogelijk gemaakt door</h2>
     <div class="flex flex-row flex-wrap justify-evenly">
       {
         sponsors.map((sponsor) => (
@@ -152,7 +152,7 @@ const sponsors = [
                 alt={sponsor.alt}
                 width={250}
                 quality="high"
-                format="avif"
+                format="png"
               />
             </a>
           </div>
