--- a/src/pages/uzg.astro
+++ b/src/pages/uzg.astro
@@ -20,7 +20,7 @@ import logoDFM from "../assets/img/logodinxperfm.png";
             decoding="auto"
             class="mx-auto w-32 h-32"
             quality="max"
-            format="avif"
+            format="png"
           /></a
         >
         <p class="text-center mt-4">"Het swingende geluid van Dinxperlo!"</p>
