Declare all images to load eager and decode auto. Make browsers do what it thinks is fastest.

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -153,6 +153,8 @@ const sponsors = [
                 width={250}
                 quality="high"
                 format="png"
+                loading="eager"
+                decoding="auto"
               />
             </a>
           </div>
