--- a/src/pages/uzg.astro
+++ b/src/pages/uzg.astro
@@ -23,7 +23,7 @@ import logoDFM from "../assets/img/logodinxperfm.png";
             format="png"
           /></a
         >
-        <p class="text-center mt-4">"Het swingende geluid van Dinxperlo!"</p>
+        <p class="text-center mt-4">Het swingende geluid van Dinxperlo!</p>
       </div>
       <h1 class="text-4xl font-bold text-gray-100 sm:text-5xl lg:text-6xl">
         Uitzending gemist
